[package]
name = "carrion-crawler"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
dbam = { path = "../dbam" }
toml = "0.8.2"

[dev-dependencies]
rusty-hook = "^0.11.2"
